update new docs
